# lightvideo

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: banner.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  backend.js  icons.js  style.css  tools.js
scripts/: download_asr_runtime.sh  download_ffmpeg.sh  make_icon.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
