[package]
name = "slim-video"
version = "1.0.0"
description = "视频瘦身 SlimVideo - 无损画质，极限压缩"
authors = ["云中江树"]
license = "CC-BY-NC-4.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[profile.release]
strip = true
lto = true
